# gedit-plugins

./: AUTHORS  NEWS  README.md  gedit-plugins.doap  meson.build  meson_options.txt
debian/: changelog  control  control.in  copyright  gedit-plugin-bookmarks.install  gedit-plugin-bracket-completion.install  gedit-plugin-character-map.install  gedit-plugin-code-comment.install  gedit-plugin-color-picker.install  gedit-plugin-color-schemer.install  gedit-plugin-commander.install  gedit-plugin-draw-spaces.install  gedit-plugin-find-in-files.install  gedit-plugin-git.install  gedit-plugin-join-lines.install  gedit-plugin-multi-edit.install  gedit-plugin-session-saver.install  gedit-plugin-smart-spaces.install  gedit-plugin-synctex.install  gedit-plugin-terminal.install  gedit-plugin-text-size.install  gedit-plugin-translate.install  gedit-plugin-word-completion.install  gedit-plugin-zeitgeist.install  gedit-plugins-common.install  rules
help/: meson.build
help/C/: bookmarks.page  bracket-comp.page  character-map.page  code-comment.page  color-picker.page  commander.page  draw-spaces.page  git.page  join-split-lines.page  legal-plugins.xml  multi-edit.page  session-saver.page  synctex.page  terminal.page  text-size.page  translate.page  word-completion.page
help/ar/: ar.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/hu/: hu.po
help/lv/: lv.po
help/pl/: pl.po
help/ru/: ru.po
help/sv/: sv.po
help/th/: th.po
help/uk/: uk.po
plugins/: config.vapi  gpdefs.py.in  meson.build
plugins/bookmarks/: bookmarks.plugin.desktop.in.in  gedit-bookmarks-app-activatable.c  gedit-bookmarks-app-activatable.h  gedit-bookmarks-plugin.c  gedit-bookmarks.metainfo.xml.in  meson.build
plugins/bookmarks/messages/: gedit-bookmarks-message-add.c  gedit-bookmarks-message-goto-next.c  gedit-bookmarks-message-goto-previous.c  gedit-bookmarks-message-remove.c  gedit-bookmarks-message-toggle.c  meson.build
plugins/bracketcompletion/: bracketcompletion.plugin.desktop.in.in  gedit-bracketcompletion.metainfo.xml.in  meson.build
plugins/charmap/: charmap.plugin.desktop.in.in  gedit-charmap.metainfo.xml.in  meson.build
plugins/charmap/charmap/: __init__.py
plugins/codecomment/: codecomment.py  gedit-codecomment.metainfo.xml.in  meson.build
plugins/colorpicker/: colorpicker.plugin.desktop.in.in  gedit-colorpicker.metainfo.xml.in  meson.build
plugins/colorschemer/: colorschemer.plugin.desktop.in.in  gedit-colorschemer.metainfo.xml.in  meson.build  schemer.ui
plugins/colorschemer/schemer/: __init__.py  languages.py  schemer.py
plugins/commander/: commander.plugin.desktop.in.in  gedit-commander.metainfo.xml.in  meson.build
plugins/commander/commander/: __init__.py  appactivatable.py  entry.py  history.py  info.py  modules.py  utils.py  windowactivatable.py
plugins/commander/commander/commands/: __init__.py  accel_group.py  completion.py  exceptions.py  method.py  module.py  result.py  rollbackimporter.py
plugins/commander/modules/: align.py  bookmark.py  doc.py  edit.py  format.py  goto.py  help.py  move.py  reload.py  set.py  shell.py
plugins/commander/modules/find/: __init__.py  finder.py  regex.py
plugins/drawspaces/: drawspaces.plugin.desktop.in.in  gedit-drawspaces-app-activatable.c  gedit-drawspaces-app-activatable.h  gedit-drawspaces-view-activatable.c  gedit-drawspaces-view-activatable.h  gedit-drawspaces.gresource.xml  gedit-drawspaces.metainfo.xml.in  meson.build  org.gnome.gedit.plugins.drawspaces.gschema.xml
plugins/findinfiles/: dialog.ui  dialog.vala  findinfiles.gresource.xml  findinfiles.plugin.desktop.in.in  gedit-findinfiles.metainfo.xml.in  job.vala  matcher.vala  meson.build  plugin.vala  result-panel.vala
plugins/git/: gedit-git.metainfo.xml.in  git.plugin.desktop.in.in  meson.build
plugins/git/git/: __init__.py  appactivatable.py  debug.py  diffrenderer.py  viewactivatable.py  windowactivatable.py  workerthread.py
plugins/joinlines/: gedit-joinlines.metainfo.xml.in  joinlines.plugin.desktop.in.in  meson.build
plugins/multiedit/: gedit-multiedit.metainfo.xml.in  meson.build  multiedit.plugin.desktop.in.in
plugins/sessionsaver/: meson.build  sessionsaver.plugin.desktop.in.in
plugins/sessionsaver/sessionsaver/: __init__.py  windowactivable.py
plugins/sessionsaver/tests/: meson.build  test-saved-sessions.xml  testsession.py  testsessionstore.py  testxmlsessionstore.py
plugins/smartspaces/: gedit-smart-spaces-view-activatable.c  gedit-smart-spaces-view-activatable.h  gedit-smartspaces.metainfo.xml.in  meson.build  smartspaces.plugin.desktop.in.in
plugins/synctex/: gedit-synctex.metainfo.xml.in  meson.build  synctex.plugin.desktop.in.in
plugins/synctex/synctex/: __init__.py  evince_dbus.py  synctex.py
plugins/terminal/: gedit-terminal.metainfo.xml.in  meson.build  terminal.py
plugins/textsize/: gedit-textsize.metainfo.xml.in  meson.build  textsize.plugin.desktop.in.in
plugins/translate/: gedit-translate.metainfo.xml.in  meson.build  org.gnome.gedit.plugins.translate.gschema.xml  run-tests.sh  translate.plugin.desktop.in.in
plugins/translate/tests/: meson.build  testapertium.py  testyandex.py
plugins/translate/translate/: __init__.py  preferences.py  settings.py  translateview.py
plugins/translate/translate/services/: apertium.py  service.py  services.py  yandex.py
plugins/translate/translate/ui/: preferences.ui
plugins/wordcompletion/: gedit-word-completion-plugin.c  gedit-word-completion-plugin.h  gedit-word-completion.gresource.xml  gedit-wordcompletion.metainfo.xml.in  meson.build  wordcompletion.plugin.desktop.in.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gu.po  he.po  hi.po  hr.po  hu.po  (+54 more)
