gedit_help_sources = [
  'bookmarks.page',
  'bracket-comp.page',
  'character-map.page',
  'code-comment.page',
  'color-picker.page',
  'commander.page',
  'draw-spaces.page',
  'git.page',
  'join-split-lines.page',
  'legal-plugins.xml',
  'multi-edit.page',
  'session-saver.page',
  'synctex.page',
  'terminal.page',
  'text-size.page',
  'translate.page',
  'word-completion.page',
]

gnome.yelp(
  'gedit',
  sources: gedit_help_sources,
)
